--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,5 @@ psycopg2-binary==2.9.9
 whitenoise==6.7.0
 django-storages==1.14.3
 azure-storage-blob==12.20.0
+pillow==10.4.0
+django-cors-headers==4.4.0
